src/test/fail/brace_outside_block.ly
###
SyntaxError: '}' outside of a block.
Where: File "test/fail/brace_outside_block.ly" at line 6
###

}
